--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "description": "Generate random CPFs inside the Insomnia REST client",
     "version": "1.1.1",
     "main": "randomCPF.js",
+    "license": "MIT",
+    "author": "Edicarlos Lopes <edicarlos.lds@gmail.com>",
     "insomnia": {
-      "name": "randomCPF",
+      "name": "Random CPF Generate",
       "description": "Generate a random cpf number"
     },
     "repository": "https://github.com/edicarloslds/insomnia-plugin-random-cpf",
